@@ -157,6 +157,10 @@ class TestVector < Test::Unit::TestCase
     assert_equal(5, Vector[3, 4].r)
   end
 
+  def test_round
+    assert_equal(Vector[1.234, 2.345, 3.40].round(2), Vector[1.23, 2.35, 3.4])
+  end
+
   def test_covector
     assert_equal(Matrix[[1,2,3]], @v1.covector)
   end
