@@ -44,6 +44,9 @@ with all sufficient information, see the ChangeLog file.
  * Base64.urlsafe_decode64: now it accepts not only correctly-padded
    input but also unpadded input.
 
+* lib/matrix.rb
+ * Add Vector#round. https://github.com/ruby/ruby/pull/802
+
 * ext/coverage/coverage.c
   * Coverage.peek_result: new method to allow coverage to be captured without
     stopping the coverage tool.
